--- a/electron/app/html/moto/app.html
+++ b/electron/app/html/moto/app.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Internet of Things</title>
+    <title>(MOTO) Internet of Things</title>
     <script>
       (function() {
         if (!process.env.HOT) {
